--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                     <h2>
                         Заголовок второй секции
                     </h2>
-                    <input type="text" placeholder="Имя">
-                    <input type="email" placeholder="E-mail">
-                    <input type="tel" placeholder="Телефон">
-                    <textarea placeholder="Сообщение"></textarea>
+                    <input type="text" placeholder="Имя" name="name" required>
+                    <input type="email" placeholder="E-mail" name="email" required>
+                    <input type="tel" placeholder="Телефон" name="tel" required>
+                    <textarea placeholder="Сообщение" name="text" required></textarea>
                     <button type="submit" class="send">
                         Отправить
                     </button>
